# OmniTaskAgent

./: .env.example  .gitignore  Dockerfile  adapters.py  langgraph.json  package.json  pyproject.toml  run_mcp.py  smithery.yaml
.cursor/: mcp.json
examples/: __init__.py  basic_usage.py
omni_task_agent/: __init__.py  agent.py  cli.py  config.py
tests/: README.md  conftest.py  test_agent.py  test_cli.py  test_config.py  test_integration.py
